result/subtask09-function/testcase01.out
> Create symbol table (scope level 0)
func: check
> Insert `check` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `a` (addr: 0) to scope level 1
> Insert `b` (addr: 1) to scope level 1
> Insert `s` (addr: 2) to scope level 1
> Insert `c` (addr: 3) to scope level 1
IDENT (name=s, address=2)
IDENT (name=endl, address=-1)
cout string string
IDENT (name=a, address=0)
STR_LIT " "
IDENT (name=b, address=1)
STR_LIT " "
IDENT (name=s, address=2)
IDENT (name=endl, address=-1)
cout int string int string string string
IDENT (name=c, address=3)
BOOL_LIT TRUE
EQL
RETURN

> Dump symbol table (scope level: 1)
Index     Name                Type      Addr      Lineno    Func_sig  
0         a                   int       0         1         -         
1         b                   int       1         1         -         
2         s                   string    2         1         -         
3         c                   bool      3         1         -         
func: main
> Insert `main` (addr: 4) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 5) to scope level 1
IDENT (name=check, address=-1)
> Insert `result` (addr: 6) to scope level 1
/home/share/hw2/input/subtask09-function/testcase01.cpp:7:24: error:  syntax error
     7 |    bool result = check( ,2,"apple",true);
       |                       ^
Total lines: 7
